# crypto_grid_system

./: .gitignore  README.md  build_exe.py  main.py  pyproject.toml  requirements.txt  test_api.py  三方协作工作流程.md  目录结构.txt
config/: api_config.json
config/api_config/ohlcv/: api_config.json
config/api_config/xjp/: api_config.json
data/grid_strategy/: spot_strategies.json
script/: create_project.py  directory_structure.py  lines.py  svg_to_ico.py
src/database/: json_db.py
src/exchange/: base_client.py  client_factory.py
src/exchange/bingX/: __init__.py  bingx_client.py  bingx_rest_api.py  exceptions.py
src/exchange/bingX/websocket/: bingx_ws_client.py  ws_manager.py
src/exchange/bitget/: bg_v2_api.py  bitget_client.py  client.py  config_loader.py  constants.py  consts.py  utils.py
src/exchange/bitget/bitget_client/: bgapi_client.py  bgws_client.py  bitget_client.py
src/exchange/bitget/v1/mix/: account_api.py  market_api.py  order_api.py
src/exchange/bitget/v1/spot/: account_api.py  market_api.py  order_api.py  wallet_api.py
src/exchange/bitget/v2/: bg_v2_api.py
src/exchange/bitget/v2/mix/: account_api.py  market_api.py  order_api.py
src/exchange/bitget/v2/spot/: account_api.py  market_api.py  order_api.py  wallet_api.py
src/exchange/bitget/websocket/: bgws_client.py
src/exchange/bitget/ws/: bgws_client.py  bgws_response.py  bitget_ws_client.py
src/runtime_hooks/: ssl_hook.py
src/strategy/grid/: grid_core.py  grid_strategy_manager.py  grid_trader.py  strategy_interface.py
src/ui/components/: welcome_page.py
src/ui/dialogs/: grid_settings_aidlog.py
src/ui/grid/: api_config_manager.py  grid_controls.py  grid_settings_aidlog.py  grid_strategy_tab.py  grid_table.py  strategy_manager_wrapper.py
src/ui/tabs/: grid_strategy_tab.py
src/ui/tabs/abandon/: grid_strategy_tab(ab).py
src/ui/windows/: main_window.py
src/utils/common/: common.py  tools.py
src/utils/logger/: log_manager.py
src/utils/storage/: database.py
tests/: get_dir.py  qt_version.py
